# practice

./: README  bookmark  gitinit  how_to_setup_apm_in_mac  mangos.txt  markconfigure
cmakeluabind/: CMakeLists.txt  c_flag_overrides.cmake  cxx_flag_overrides.cmake
cmakeluabind/examples/: CMakeLists.txt
cmakeluabind/examples/any_converter/: CMakeLists.txt
cmakeluabind/examples/filesystem/: CMakeLists.txt  directory_iterator.hpp
cmakeluabind/examples/glut/: CMakeLists.txt
cmakeluabind/examples/hello_world/: CMakeLists.txt  hello_world.cpp
cmakeluabind/examples/intrusive_ptr/: CMakeLists.txt  intrusive_ptr.cpp
cmakeluabind/examples/regexp/: CMakeLists.txt  regex_wrap.cpp
cmakeluabind/lua/include/: lua51.exp  lua51.lib  test.lua
cmakeluabind/lua/src/: CMakeLists.txt
cmakeluabind/src/: CMakeLists.txt
cmakeluabind/test/: CMakeLists.txt  CMakeLists.txt~  benchmark.cpp  test_has_get_pointer.cpp  test_typetraits.cpp  test_value_wrapper.cpp
erlang/: Erlang-wiki.htm  dbgtest.erl  emacs.conf  erlangbookmark  erlmakefile  example1.erl  maxprocesses.erl  set.erl  square.erl  square1.erl  square2.erl  square3.erl
zeromq/echoserver/: client.c  server.c.cpp
zeromq/multipart message/: client.c  server.c
zeromq/pipeline/: main.c
zeromq/publish_subscribe/: client.c  server.c
